@@ -7,7 +7,7 @@ Standards-Version: 3.8.2
 XS-Python-Version: all
 Build-Depends: apt-utils,
                debhelper (>= 7.3.5),
-               libapt-pkg-dev (>= 0.7.22~),
+               libapt-pkg-dev (>= 0.7.21),
                python-all-dbg,
                python-all-dev,
                python-central (>= 0.5),
